--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,13 @@
 
     <string name="action_settings">Settings</string>
     <string name="message_elipses">Message...</string>
+    <string name="logo_text">logo</string>
+    <string name="login_button_text">Login</string>
+    <string name="register_button_text">Register</string>
+    <string name="forgot_password_button_text">Forgot your password?</string>
+    <string name="create_account_button_text">Create an account</string>
+    <string name="back_to_login_button_text">Back to login</string>
+    <string name="image_text">image</string>
+
+
 </resources>
