--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="email_placeholder">email address</string>
     <string name="twilio_first_line">A simple chat app built using the</string>
     <string name="twilio_second_line">Twilio IP Messaging API</string>
+    <string name="login_all_fields_required">All fields are required</string>
+    <string name="login_user_progress_message">signing in...</string>
+    <string name="register_user_progress_message">registering user...</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
