--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,8 +30,9 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="logout_text">Logout</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_leave_channel">Leave channel</string>
     <string name="message_elipses">Message...</string>
     <string name="logo_text">logo</string>
     <string name="login_button_text">Login</string>
