--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
 
     <string name="logout_prompt_message">Are you sure you want to logout?</string>
     <string name="action_leave_channel">Leave channel</string>
-    <string name="message_elipses">Message...</string>
+    <string name="message_elipses">Say something</string>
     <string name="logo_text">logo</string>
     <string name="login_button_text">Login</string>
     <string name="register_button_text">Register</string>
@@ -42,6 +42,9 @@
     <string name="create_account_button_text">Create an account</string>
     <string name="back_to_login_button_text">Back to login</string>
     <string name="image_text">image</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
