--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,8 +43,7 @@
     <string name="back_to_login_button_text">Back to login</string>
     <string name="image_text">image</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="default_channel_name">General Channel</string>
 
 
 </resources>
