Change unique channel name identifier, roll back channel added and deleted listener

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="image_text">image</string>
 
     <string name="default_channel_name">General Channel</string>
+    <string name="default_channel_unique_name">general</string>
 
 
 </resources>
