--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="loading_channels_message">Loading channel information</string>
     <string name="channel_name_required_message">Channel name cannot be empty</string>
     <string name="channel_delete_prompt_message">Are you sure you want to delete this channel?</string>
+    <string name="channel_name_equals_default_name">You cannot create a channel with the default channel\'s name</string>
 
 
 </resources>
